<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="application_title">My Nanodegree Apps!</string>
    <string name="spotify_streamer_name">Spotify Streamer</string>
    <string name="scores_app_name">Scores App</string>
    <string name="library_app_name">Library App</string>
    <string name="build_it_bigger_name">Build It Bigger</string>
    <string name="xyz_reader_name">XYZ Reader</string>
    <string name="capstone_name">Capstone: My Own App</string>
</resources>
